# casync-nano

./: CMakeLists.txt  README.md  caibx.c  caibx.h  chunk.c  chunk.h  chunker.c  chunker.h  csn-bench.c  csn-tool.c  encrypt.c  encrypt.h  index.c  index.h  log.c  log.h  main.c  patchdd.c  sha.c  sha.h  store-http.c  store-http.h  store-local.c  store-local.h  store.c  store.h  target.c  target.h  ui.c  ui.h  utils.c  utils.h
.github/workflows/: coverity.yml  tests.yml
doc/: chunk-encryption.md  csn-tool.1  csn-tool.1.scd  csn.1  csn.1.scd
iotest/: pattern.h  write.c
iotest/results/: sama5-emmc
parser/: a.c  make_pattern.pl
test/: CMakeLists.txt  chunker_test.c  encrypt_test.c  sha_test.c  xorshift32.c  xorshift32.h
test/e2e/: casync_test.py  csn_test.py
